--- a/tests/Customers.Api.Tets.Integration/Customers.Api.Tets.Integration.csproj
+++ b/tests/Customers.Api.Tets.Integration/Customers.Api.Tets.Integration.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.3" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="DotNet.Testcontainers" Version="1.6.0" />
     <PackageReference Include="FluentAssertions" Version="8.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
