--- a/tests/Customers.Api.Tets.Integration/Customers.Api.Tets.Integration.csproj
+++ b/tests/Customers.Api.Tets.Integration/Customers.Api.Tets.Integration.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="FluentAssertions" Version="8.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="WireMock.Net" Version="1.8.12" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
