(feat): Added first integration testing

--- a/tests/Customers.Api.Tets.Integration/Customers.Api.Tets.Integration.csproj
+++ b/tests/Customers.Api.Tets.Integration/Customers.Api.Tets.Integration.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <UserSecretsId>5625f674-93d2-4bb3-84c7-0f9c54f911ed</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
